--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: my_app
-description: A new Flutter project.
+name: buzar
+description: An AI character chat application.
 publish_to: 'none'
 version: 1.0.0+1
 
