--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>AVAudioSession</key>
 	<dict>
 		<key>Category</key>
@@ -51,7 +56,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Buzar needs microphone access to record and send audio messages. Without this permission, you won't be able to record and share audio messages.</string>
+	<string>Buzar needs microphone access to record and send audio messages. Without this permission, you won&apos;t be able to record and share audio messages.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>Buzar uses device identifier information to enhance the security of your account transactions and provide personalized advertising services tailored to your preferences.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
