--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.1.0
   package_info_plus: ^4.0.0
   audioplayers: ^5.2.1
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
