--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -91,7 +91,7 @@ jobs:
         env:
           IPA_PATH: "build/ios/ipa/buzar.ipa"
           APPLE_ID: "Summer2024DD@outlook.com"
-          APP_SPECIFIC_PASSWORD: "xxx"
+          APP_SPECIFIC_PASSWORD: "aezh-ujtl-kfwv-czma"
         run: |
           xcrun altool --upload-app -f "$IPA_PATH" \
             -t ios \
