--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,13 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>AVAudioSession</key>
 	<dict>
 		<key>Category</key>
@@ -53,10 +46,17 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Buzar needs microphone access to record and send audio messages. Without this permission, you won&apos;t be able to record and share audio messages.</string>
+	<string>Buzar needs microphone access to record and send audio messages. Without this permission, you won't be able to record and share audio messages.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>Buzar uses device identifier information to enhance the security of your account transactions and provide personalized advertising services tailored to your preferences.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
