--- a/.github/workflows/ios-release.yml
+++ b/.github/workflows/ios-release.yml
@@ -61,12 +61,12 @@ jobs:
           keychain-password: 111111
 
       # # 添加检查步骤
-      # - name: 检查构建文件
-      #   run: |
-      #     echo "检查 build/ios/ipa 目录内容："
-      #     ls -la build/ios/ipa/
-      #     echo "检查 build/ios 目录内容："
-      #     ls -la build/ios/
+       - name: 检查构建文件
+         run: |
+           echo "检查 build/ios/ipa 目录内容："
+           ls -la build/ios/ipa/
+           echo "检查 build/ios 目录内容："
+           ls -la build/ios/
 
       - name: Archive IPA
         uses: actions/upload-artifact@v4
@@ -87,14 +87,14 @@ jobs:
       #     git clone https://github.com/ZhangLi1984/itsm.git
       #     ./itsm/bin/iTMSTransporter -assetFile $IPA_FILE_NAME -u $APPLE_USERNAME -p $APPLE_PASSWORD -m upload -asc_provider $APPLE_ASC_PROVIDER -v verbose
 
-      - name: Upload to App Store using altool
-        env:
-          IPA_PATH: "build/ios/ipa/buzar.ipa"
-          APPLE_ID: "Summer2024DD@outlook.com"
-          APP_SPECIFIC_PASSWORD: "aezh-ujtl-kfwv-czma"
-        run: |
-          xcrun altool --upload-app -f "$IPA_PATH" \
-            -t ios \
-            -u "$APPLE_ID" \
-            -p "$APP_SPECIFIC_PASSWORD" \
-            --verbose
+#      - name: Upload to App Store using altool
+#        env:
+#          IPA_PATH: "build/ios/ipa/buzar.ipa"
+#          APPLE_ID: "Summer2024DD@outlook.com"
+#          APP_SPECIFIC_PASSWORD: "aezh-ujtl-kfwv-czma"
+#        run: |
+#          xcrun altool --upload-app -f "$IPA_PATH" \
+#            -t ios \
+#            -u "$APPLE_ID" \
+#            -p "$APP_SPECIFIC_PASSWORD" \
+#            --verbose
